--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
       div{
         margin-top: 1080px;
         margin-left: 270px;
-        background-color: aquamarine;
+        background-color: red;
         width:375px;
         height: 110px;
     
